refactor: renamed local classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<nav class="i-navbar container">
+			<nav class="i-navbar i-container">
 				<div class="nav-item">
 					<h2 class="i-logo">
 						<i class="fas fa-cubes"></i>
@@ -37,7 +37,7 @@
 				</div>
 			</nav>
 		</header>
-		<main class="container">
+		<main class="i-container">
 			<section class="hero flex flex-center flex-column">
 				<h1 class="i-logo">
 					<i class="fas fa-cubes"></i>
