--- a/pages/docs.html
+++ b/pages/docs.html
@@ -248,7 +248,7 @@
 							</p>
 						</div>
 						<div class="component-description">
-							<div class="flex flex-gap-2">
+							<div class="flex flex-gap-2 wrap">
 								<button class="btn btn-primary">primary button</button>
 								<button class="btn btn-secondary btn-rounded">
 									secondary button
@@ -265,7 +265,7 @@
 							</p>
 						</div>
 						<div class="component-description">
-							<div class="flex flex-gap-2">
+							<div class="flex flex-gap-2 wrap">
 								<a href="##" class="link link-primary">primary link</a>
 								<a href="##" class="link link-secondary link-rounded"
 									>secondary link</a
@@ -434,9 +434,8 @@
 
 		<footer class="flex flex-center flex-column">
 			<p>Created by Tahir Ahmed T</p>
-			<ul
-				class="list style-none horizontal wd-100 justify no-margin-center list-gap-1"
-			>
+
+			<ul class="list style-none horizontal wd-100 justify-center list-gap-1">
 				<li>
 					<a
 						class="list-icon"
