--- a/pages/docs.html
+++ b/pages/docs.html
@@ -202,25 +202,64 @@
 							<p class="justify">
 								badges are usually seen in social media apps to indicate the
 								status of whether a person is online or offline. They are also
-								used to indicate number of unread notifications
+								used to indicate number of unread notifications. There are
+								multiple variants of these that come with different colors and
 							</p>
 						</div>
+
 						<h4 class="heading-4 head-lvl-4">badge on icon</h4>
 						<div class="component-description">
 							<p class="justify">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Praesentium neque ex fuga debitis, cupiditate doloremque est
-								necessitatibus. Officia totam modi et. Vitae, ab recusandae!
-								Voluptatum porro facere ea facilis repudiandae!
+								badge on icon can be used to show number of notifications,
+								unread messages and so on. It usually has a icon with a number
+								representing count on that notification
 							</p>
+						</div>
+						<div class="component-description">
+							<div class="flex flex-gap-2 wrap">
+								<div
+									class="far fa-envelope badge badge-lg badge-icon badge-padding"
+								>
+									<div
+										class="badge-counter badge-top-right badge-clr-blue badge-round"
+									>
+										5
+									</div>
+								</div>
+								<div
+									class="far fa-bell badge badge-lg badge-icon badge-padding"
+								>
+									<div
+										class="badge-counter badge-top-right badge-clr-red badge-round"
+									>
+										8
+									</div>
+								</div>
+								<div
+									class="fas fa-heart badge badge-lg badge-icon badge-padding"
+								>
+									<div
+										class="badge-counter badge-top-right badge-clr-orange badge-round"
+									>
+										4
+									</div>
+								</div>
+								<div
+									class="fas fa-shopping-cart badge badge-lg badge-icon badge-padding"
+								>
+									<div
+										class="badge-counter badge-top-right badge-clr-green badge-round"
+									>
+										2
+									</div>
+								</div>
+							</div>
 						</div>
 						<h4 class="heading-4 head-lvl-4">badge on avatar</h4>
 						<div class="component-description">
 							<p class="justify">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								Praesentium neque ex fuga debitis, cupiditate doloremque est
-								necessitatibus. Officia totam modi et. Vitae, ab recusandae!
-								Voluptatum porro facere ea facilis repudiandae!
+								badges on avatars can be used to indicate the status of the
+								person - whether he / she is online
 							</p>
 						</div>
 					</div>
