style- class name fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<title>Chunks</title>
 	</head>
 	<body>
-		<header class="header">
+		<header class="i-header">
 			<nav class="i-navbar i-container">
 				<div class="nav-item">
 					<h2 class="i-logo">
