--- a/pages/docs.html
+++ b/pages/docs.html
@@ -145,21 +145,30 @@
 						</div>
 						<div class="component-description">
 							<div class="flex align-base flex-gap-2">
-								<img
-									src="../assets/avatar-1.svg"
-									alt="avatar 1"
-									class="avatar avatar-sm avatar-border"
-								/>
-								<img
-									src="../assets/avatar-2.svg"
-									alt="avatar 2"
-									class="avatar avatar-md avatar-border"
-								/>
-								<img
-									src="../assets/avatar-3.svg"
-									alt="avatar 3"
-									class="avatar avatar-lg avatar-border"
-								/>
+								<div class="avatar avatar-border">
+									<img
+										src="../assets/avatar-1.svg"
+										alt="avatar 1"
+										loading="lazy"
+										class="avatar-round avatar-sm"
+									/>
+								</div>
+								<div class="avatar avatar-border">
+									<img
+										src="../assets/avatar-2.svg"
+										alt="avatar 2"
+										loading="lazy"
+										class="avatar-round avatar-md"
+									/>
+								</div>
+								<div class="avatar avatar-border">
+									<img
+										src="../assets/avatar-3.svg"
+										alt="avatar 3"
+										loading="lazy"
+										class="avatar-round avatar-lg"
+									/>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -259,8 +268,82 @@
 						<div class="component-description">
 							<p class="justify">
 								badges on avatars can be used to indicate the status of the
-								person - whether he / she is online
+								person - whether he / she is online. They can be as simple as a
+								small dot or a circle with border around the image
 							</p>
+						</div>
+						<div class="component-description">
+							<div class="flex flex-gap-2 wrap align-base">
+								<div class="badge">
+									<div class="avatar avatar-border">
+										<img
+											src="../assets/avatar-1.svg"
+											alt="avatar 1"
+											loading="lazy"
+											class="avatar-round avatar-sm"
+										/>
+									</div>
+									<div class="badge-white-container">
+										<div class="badge-dot-green"></div>
+									</div>
+								</div>
+								<div class="badge">
+									<div class="avatar avatar-border">
+										<img
+											src="../assets/avatar-1.svg"
+											alt="avatar 1"
+											loading="lazy"
+											class="avatar-round avatar-sm"
+										/>
+									</div>
+									<div class="badge-white-container">
+										<div class="badge-dot-orange"></div>
+									</div>
+								</div>
+								<div class="badge">
+									<div class="avatar avatar-border">
+										<img
+											src="../assets/avatar-1.svg"
+											alt="avatar 1"
+											loading="lazy"
+											class="avatar-round avatar-sm"
+										/>
+									</div>
+									<div class="badge-white-container">
+										<div class="badge-dot-red"></div>
+									</div>
+								</div>
+								<div class="badge badge-red">
+									<div class="avatar">
+										<img
+											src="../assets/avatar-4.svg"
+											alt="avatar 4"
+											loading="lazy"
+											class="avatar-round avatar-sm"
+										/>
+									</div>
+								</div>
+								<div class="badge badge-green">
+									<div class="avatar">
+										<img
+											src="../assets/avatar-4.svg"
+											alt="avatar 4"
+											loading="lazy"
+											class="avatar-round avatar-sm"
+										/>
+									</div>
+								</div>
+								<div class="badge badge-orange">
+									<div class="avatar">
+										<img
+											src="../assets/avatar-4.svg"
+											alt="avatar 4"
+											loading="lazy"
+											class="avatar-round avatar-sm"
+										/>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 
@@ -322,11 +405,12 @@
 						<div class="component-description">
 							<div class="flex flex-gap-2 stick-top">
 								<button class="btn btn-success">
-									<span><i class="fas fa-shopping-cart"></i></span>&nbsp;add to
-									cart
+									<div class="fas fa-shopping-cart"></div>
+									&nbsp;add to cart
 								</button>
 								<button class="btn btn-danger">
-									<span><i class="fas fa-trash"></i></span>&nbsp;delete
+									<div class="fas fa-trash"></div>
+									&nbsp;delete
 								</button>
 							</div>
 						</div>
@@ -375,6 +459,7 @@
 								<div class="card card-bg card-p-eq-1">
 									<div class="card-image">
 										<img
+											loading="lazy"
 											src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
 											alt="headphones"
 										/>
