feat: changed types of cards

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -105,22 +105,16 @@
 							<a class="hover-styles" href="#card">card</a>
 							<ul class="list style-none pad-left-1">
 								<li class="list-item-2">
-									<a class="hover-styles" href="#simple-card">simple card</a>
+									<a class="hover-styles" href="#">simple card</a>
 								</li>
 								<li class="list-item-2">
-									<a class="hover-styles" href="#card-with-image-and-text"
-										>card with image and text</a
-									>
+									<a class="hover-styles" href="#">basic card</a>
 								</li>
 								<li class="list-item-2">
-									<a class="hover-styles" href="#horizontal-card"
-										>horizontal card</a
-									>
+									<a class="hover-styles" href="#">card with overlay text</a>
 								</li>
 								<li class="list-item-2">
-									<a class="hover-styles" href="#vertical-card"
-										>vertical card</a
-									>
+									<a class="hover-styles" href="#">horizontal card</a>
 								</li>
 							</ul>
 						</li>
