fix: minor changes to components

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -447,7 +447,7 @@
 								</div>
 							</div>
 						</div>
-						<h4 class="heading-4 head-lvl-4">card with image and text</h4>
+						<h4 class="heading-4 head-lvl-4">basic card</h4>
 						<div class="component-description">
 							<div class="card-grid card-row">
 								<div class="card card-bg card-p-eq-1">
@@ -475,7 +475,7 @@
 								</div>
 							</div>
 						</div>
-						<h4 class="heading-4 head-lvl-4">horizontal card</h4>
+						<h4 class="heading-4 head-lvl-4">card with overlay text</h4>
 						<div class="component-description">
 							<p class="justify">
 								This can be used to display product details horizontally
@@ -504,10 +504,12 @@
 								</div>
 							</div>
 						</div>
-						<h4 class="heading-4 head-lvl-4">vertical card</h4>
+						<h4 class="heading-4 head-lvl-4">horizontal card</h4>
 						<div class="component-description">
 							<p class="justify">
-								This can be used to display product details vertically.
+								horizontal cards have image and textual content laid down side
+								by side. They are usually used in e-commerce apps , to include
+								information about the product right next to the image and
 							</p>
 							<div class="card-grid card-row">
 								<div class="card card-border card-p-eq-1">
