--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</div>
 				<div class="nav-item">
 					<ul class="i-navlist align-base">
-						<li class="i-navlist-item"><a href="pages/docs.html">Docs</a></li>
+						<li class="i-navlist-item"><a href="docs">Docs</a></li>
 						<li class="i-navlist-item">
 							<a
 								class="list-icon"
@@ -30,7 +30,7 @@
 								href="https://github.com/ttahm3d"
 								target="_blank"
 							>
-								<i class="fab fa-github"></i>
+								GitHub
 							</a>
 						</li>
 					</ul>
@@ -48,7 +48,7 @@
 					your User Interfaces at Rocket speed🚀
 				</p>
 				<pre><code>Add CDN Link and way to import image / code here</code></pre>
-				<a href="./pages/docs.html" class="primary-link">Get Started</a>
+				<a href="./docs" class="primary-link">Get Started</a>
 			</section>
 		</main>
 		<footer class="flex flex-center flex-column">
