feat: added html import link

--- a/index.html
+++ b/index.html
@@ -1,120 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="svg" href="/assets/chunks-icon.svg" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/night-owl.min.css"
-			integrity="sha512-i5X6Fdn/ZqvGSqPrdMa3FgcpXM/Nr6YccSKFYT93zljl/HZDEpvBbE5Pxp91eiWGccZLrL/LDQJd7fjTRYsVaA=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<link rel="stylesheet" href="/css/style.css" />
-		<title>Chunks</title>
-	</head>
-	<body>
-		<header class="i-header">
-			<nav class="i-navbar i-container">
-				<div class="nav-item">
-					<h2 class="i-logo">
-						<i class="fas fa-cubes"></i>
-						Chunks
-					</h2>
-				</div>
-				<div class="nav-item">
-					<ul class="i-navlist align-base">
-						<li class="i-navlist-item"><a href="docs">Docs</a></li>
-						<li class="i-navlist-item">
-							<a
-								rel="noopener noreferrer"
-								href="https://github.com/ttahm3d"
-								target="_blank"
-							>
-								GitHub
-							</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</header>
-		<main class="i-container">
-			<section class="hero flex flex-center flex-column">
-				<h1 class="i-logo">
-					<i class="fas fa-cubes"></i>
-					<span>Chunks</span>
-				</h1>
-				<h3>
-					A UI Component Library that provides utilty classes for you to create
-					your User Interfaces at Rocket speed🚀
-				</h3>
-				<p class="justify p-lvl-3">
-					Include below import url in your css files and start working on you
-					websites
-				</p>
-				<div class="code-example">
-					<pre><code class="css">@import url("chunksui.netlify.com/css/style.css")</code></pre>
-				</div>
-				<div class="flex flex-gap-1 justify-center">
-					<a href="./docs" class="link link-primary shadow">Get Started</a>
-					<a
-						rel="noopener noreferrer"
-						href="https://github.com/ttahm3d"
-						target="_blank"
-						class="link link-secondary shadow"
-						>GitHub</a
-					>
-				</div>
-			</section>
-		</main>
-		<footer class="flex flex-center flex-column">
-			<p>Created by Tahir Ahmed T</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="svg" href="/assets/chunks-icon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/night-owl.min.css"
+      integrity="sha512-i5X6Fdn/ZqvGSqPrdMa3FgcpXM/Nr6YccSKFYT93zljl/HZDEpvBbE5Pxp91eiWGccZLrL/LDQJd7fjTRYsVaA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Chunks</title>
+  </head>
+  <body>
+    <header class="i-header">
+      <nav class="i-navbar i-container">
+        <div class="nav-item">
+          <h2 class="i-logo">
+            <i class="fas fa-cubes"></i>
+            Chunks
+          </h2>
+        </div>
+        <div class="nav-item">
+          <ul class="i-navlist align-base">
+            <li class="i-navlist-item"><a href="docs">Docs</a></li>
+            <li class="i-navlist-item">
+              <a
+                rel="noopener noreferrer"
+                href="https://github.com/ttahm3d"
+                target="_blank"
+              >
+                GitHub
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="i-container">
+      <section class="hero flex flex-center flex-column">
+        <h1 class="i-logo">
+          <i class="fas fa-cubes"></i>
+          <span>Chunks</span>
+        </h1>
+        <h3>
+          A UI Component Library that provides utilty classes for you to create
+          your User Interfaces at Rocket speed🚀
+        </h3>
+        <p class="justify p-lvl-3">
+          Include below import url or Link tag in your css file or HTML file
+          respectively and start working on you websites
+        </p>
+        <div class="code-example">
+          <pre><code class="css">@import url("chunksui.netlify.com/css/style.css")</code></pre>
 
-			<ul class="list style-none horizontal wd-100 justify-center list-gap-1">
-				<li>
-					<a
-						class="list-icon"
-						rel="noopener noreferrer"
-						href="https://github.com/ttahm3d"
-						target="_blank"
-						><i class="fab fa-github"></i
-					></a>
-				</li>
-				<li>
-					<a
-						class="list-icon"
-						rel="noopener noreferrer"
-						href="https://twitter.com/ttahm3d"
-						target="_blank"
-						><i class="fab fa-twitter"></i
-					></a>
-				</li>
-				<li>
-					<a
-						class="list-icon"
-						rel="noopener noreferrer"
-						href="https://www.linkedin.com/in/tahirahmedt"
-						target="_blank"
-						><i class="fab fa-linkedin"></i
-					></a>
-				</li>
-			</ul>
-		</footer>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"
-			integrity="sha512-IaaKO80nPNs5j+VLxd42eK/7sYuXQmr+fyywCNA0e+C6gtQnuCXNtORe9xR4LqGPz5U9VpH+ff41wKs/ZmC3iA=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		></script>
-		<script>
-			hljs.highlightAll();
-		</script>
-		<script src="./js/script.js"></script>
-	</body>
+          <pre><code class="html"><link rel="stylesheet" href="https://chunksui.netlify.com/css/styles.css"></code></pre>
+        </div>
+        <div class="flex flex-gap-1 justify-center">
+          <a href="./docs" class="btn-link link-primary">Get Started</a>
+          <a
+            rel="noopener noreferrer"
+            href="https://github.com/ttahm3d"
+            target="_blank"
+            class="btn-link link-secondary"
+            >GitHub</a
+          >
+        </div>
+      </section>
+    </main>
+    <footer class="flex flex-center flex-column">
+      <p>Created by Tahir Ahmed T</p>
+
+      <ul class="list style-none horizontal wd-100 justify-center list-gap-1">
+        <li>
+          <a
+            class="list-icon"
+            rel="noopener noreferrer"
+            href="https://github.com/ttahm3d"
+            target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            class="list-icon"
+            rel="noopener noreferrer"
+            href="https://twitter.com/ttahm3d"
+            target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            class="list-icon"
+            rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/tahirahmedt"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"
+      integrity="sha512-IaaKO80nPNs5j+VLxd42eK/7sYuXQmr+fyywCNA0e+C6gtQnuCXNtORe9xR4LqGPz5U9VpH+ff41wKs/ZmC3iA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script>
+      hljs.highlightAll();
+    </script>
+    <script src="./js/script.js"></script>
+    <script src="js/codeblocks.js"></script>
+  </body>
 </html>
