feat: added base content for images

--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
           your User Interfaces at Rocket speed🚀
         </h3>
         <p class="justify p-lvl-3">
-          Include below import url or Link tag in your css file or HTML file
-          respectively and start working on you websites
+          Include below import url your css file and start working on you
+          websites
         </p>
         <div class="code-example">
           <pre><code class="css">@import url("chunksui.netlify.com/css/style.css")</code></pre>
-
-          <pre><code class="html"><link rel="stylesheet" href="https://chunksui.netlify.com/css/styles.css"></code></pre>
         </div>
         <div class="flex flex-gap-1 justify-center">
           <a href="./docs" class="btn-link link-primary">Get Started</a>
