--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
         <div class="nav-item">
           <ul class="i-navlist align-base">
-            <li class="i-navlist-item"><a href="docs">Docs</a></li>
+            <li class="i-navlist-item">
+              <a href="./docs/introduction">Docs</a>
+            </li>
             <li class="i-navlist-item">
               <a
                 rel="noopener noreferrer"
@@ -62,7 +64,9 @@
           <pre><code class="css">@import url("chunksui.netlify.com/css/style.css")</code></pre>
         </div>
         <div class="flex flex-gap-1 justify-center">
-          <a href="./docs" class="btn-link link-primary">Get Started</a>
+          <a href="./docs/introduction" class="btn-link link-primary"
+            >Get Started</a
+          >
           <a
             rel="noopener noreferrer"
             href="https://github.com/ttahm3d"
