--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <body>
     <header class="i-header">
       <nav class="i-navbar i-container">
-        <div class="nav-item">
+        <div class="i-nav-item">
           <h2 class="i-logo">
             <i class="fas fa-cubes"></i>
             Chunks
           </h2>
         </div>
-        <div class="nav-item">
+        <div class="i-nav-item">
           <ul class="i-navlist align-base">
             <li class="i-navlist-item">
               <a href="./docs/introduction">Docs</a>
