feat: changed header bg

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <header class="i-header">
       <nav class="i-navbar i-container">
         <div class="i-nav-item">
-          <h2 class="i-logo">
-            <i class="fas fa-cubes"></i>
-            Chunks
-          </h2>
+          <div class="header-logo">
+            <a href="../../index.html">
+              <i class="fas fa-cubes"></i>
+              Chunks
+            </a>
+          </div>
         </div>
         <div class="i-nav-item">
           <ul class="i-navlist align-base">
@@ -54,7 +56,7 @@
         </h1>
         <h3>
           A UI Component Library that provides utilty classes for you to create
-          your User Interfaces at Rocket speed🚀
+          your User Interfaces at Rocket speed 🚀
         </h3>
         <p class="justify p-lvl-3">
           Include below import url your css file and start working on you
