feat: changed button styles on home page

--- a/index.html
+++ b/index.html
@@ -66,14 +66,12 @@
           <pre><code class="css">@import url("chunksui.netlify.com/css/style.css")</code></pre>
         </div>
         <div class="flex flex-gap-1 justify-center">
-          <a href="./docs/introduction" class="btn-link link-primary"
-            >Get Started</a
-          >
+          <a href="./docs/introduction" class="btn btn-primary">Get Started</a>
           <a
             rel="noopener noreferrer"
             href="https://github.com/ttahm3d"
             target="_blank"
-            class="btn-link link-secondary"
+            class="btn btn-secondary"
             >GitHub</a
           >
         </div>
