feat: added class to footer element

--- a/docs0/index.html
+++ b/docs0/index.html
@@ -684,7 +684,7 @@ avatar-sq being used to create different shapes --&gt;
       </section>
     </main>
 
-    <footer class="flex flex-center flex-column">
+    <footer class="i-footer flex flex-center flex-column">
       <p>Created by Tahir Ahmed T</p>
 
       <ul class="list style-none horizontal wd-100 justify-center list-gap-1">
