--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
       </nav>
     </header>
     <main class="i-container">
-      <section class="hero flex flex-center flex-column">
+      <section class="i-hero flex flex-center flex-column">
         <h1 class="i-logo">
           <i class="fas fa-cubes"></i>
           <span>Chunks</span>
         </h1>
-        <h3>
+        <h2>
           A UI Component Library that provides utilty classes for you to create
           your User Interfaces at Rocket speed 🚀
-        </h3>
+        </h2>
         <p class="justify p-lvl-3">
           Include below import url your css file and start working on you
           websites
@@ -77,7 +77,7 @@
         </div>
       </section>
     </main>
-    <footer class="flex flex-center flex-column">
+    <footer class="i-footer flex flex-center flex-column">
       <p>Created by Tahir Ahmed T</p>
 
       <ul class="list style-none horizontal wd-100 justify-center list-gap-1">
