--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Chunks - UI component Library" />
     <link rel="icon" type="svg" href="/assets/chunks-icon.svg" />
     <link
       rel="stylesheet"
@@ -83,6 +84,7 @@
       <ul class="list style-none horizontal wd-100 justify-center list-gap-1">
         <li>
           <a
+            aria-label="Github"
             class="list-icon"
             rel="noopener noreferrer"
             href="https://github.com/ttahm3d"
@@ -92,6 +94,7 @@
         </li>
         <li>
           <a
+            aria-label="Twitter"
             class="list-icon"
             rel="noopener noreferrer"
             href="https://twitter.com/ttahm3d"
@@ -101,6 +104,7 @@
         </li>
         <li>
           <a
+            aria-label="LinkedIn"
             class="list-icon"
             rel="noopener noreferrer"
             href="https://www.linkedin.com/in/tahirahmedt"
