--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <span>Chunks</span>
         </h1>
         <h2>
-          A UI Component Library that provides utilty classes for you to create
+          A UI Component Library that provides utility classes for you to create
           your User Interfaces at Rocket speed 🚀
         </h2>
         <p class="justify p-lvl-3">
