--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           your User Interfaces at Rocket speed 🚀
         </h2>
         <p class="justify p-lvl-3">
-          Include below import url your css file and start working on you
+          Include below import url your css file and start working on your
           websites
         </p>
         <div class="code-example">
-          <pre><code class="css">@import url("chunksui.netlify.com/css/style.css")</code></pre>
+          <pre><code class="css">@import url("https://chunksui.netlify.app/css/style.css")</code></pre>
         </div>
         <div class="flex flex-gap-1 justify-center">
           <a href="./docs/introduction" class="btn btn-primary">Get Started</a>
