feat: added toggle btn and script for theme toggle

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               </a>
             </li>
           </ul>
+          <button class="btnToggle">
+            <i class="fas fa-moon"></i>
+          </button>
         </div>
       </nav>
     </header>
