--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           your User Interfaces at Rocket speed 🚀
         </h2>
         <p class="justify p-lvl-3">
-          Include below import url your css file and start working on your
+          Include below import url in your css file and start working on your
           websites
         </p>
         <div class="code-example">
